crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/cannot_call_via_contract_type_name/foreign_contract/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 3

[TypeError 3419] Error: Cannot call function via contract type name.
    ╭─[input.sol:17:9]
    │
 17 │         A.f();
    │         ──┬──  
    │           ╰──── Error occurred here.
────╯

[TypeError 3419] Error: Cannot call function via contract type name.
    ╭─[input.sol:18:9]
    │
 18 │         A.g();
    │         ──┬──  
    │           ╰──── Error occurred here.
────╯

[TypeError 3419] Error: Cannot call function via contract type name.
    ╭─[input.sol:19:9]
    │
 19 │         A.h(); // might be allowed in the future
    │         ──┬──  
    │           ╰──── Error occurred here.
────╯
